Bug 342959 - [projectmodel] Opening a PO file belonging to an open project in vim empties project overview
Summary: [projectmodel] Opening a PO file belonging to an open project in vim empties ...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: project management (other bugs)
Version First Reported In: 2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-17 12:05 UTC by Lasse Liehu
Modified: 2015-01-20 22:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2015-01-17 12:05:10 UTC
This also happens with KWrite if the file is modified, i.e. when KWrite writes its swap file to disk. vim writes a swap file on startup. KWrite's swap file name is of the form .something.po.kate-swp and vim's file name is of the form .something.po.swp. Project overview remains empty when KWrite or vim is closed and the swap file is deleted.

Reproducible: Always

Steps to Reproduce:
1. Open a project that contains some PO files in Lokalize.
2. Open one of the PO files belonging to that project in vim or KWrite. If opening in KWrite, make some changed but don't save the file.

Actual Results:  
The file list becomes empty and all counts at the bottom (total, not ready and untranslated) become zero.

Expected Results:  
The swap file doesn't cause the project view to be empty.
Comment 1 Nick Shaforostoff 2015-01-20 22:11:09 UTC
Git commit d1d65d406e2f56a46cb4fd36c6bb4440ea0701a0 by Nick Shaforostoff.
Committed on 20/01/2015 at 22:58.
Pushed by shaforo into branch 'master'.

D  +0    -10   src/nokde-stubs/klocalizedstring.cpp
M  +5    -0    src/nokde-stubs/klocalizedstring.h
M  +4    -0    src/nokde-stubs/prefs.cpp
M  +38   -13   src/project/projectmodel.cpp
M  +4    -1    src/project/projectmodel.h
M  +1    -1    src/project/projecttab.cpp
M  +13   -2    src/project/projectwidget.cpp
M  +3    -1    src/project/projectwidget.h
M  +1    -1    src/xlifftextedit.cpp

http://commits.kde.org/lokalize/d1d65d406e2f56a46cb4fd36c6bb4440ea0701a0