src/project/projectwidget.cpp
@@ -1,7 +1,7 @@
 /* ****************************************************************************
   This file is part of Lokalize
 
-  Copyright (C) 2007-2014 by Nick Shaforostoff <shafff@ukr.net>
+  Copyright (C) 2007-2015 by Nick Shaforostoff <shafff@ukr.net>
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License as
@@ -283,7 +283,8 @@ ProjectWidget::ProjectWidget(/*Catalog* catalog, */QWidget* parent)
     m_proxyModel->setSourceModel(Project::instance()->model());
     //m_proxyModel->setDynamicSortFilter(true);
     setModel(m_proxyModel);
-    //setModel(Project::instance()->model());
+    connect(Project::instance()->model(), SIGNAL(loadingAboutToStart()), this, SLOT(modelAboutToReload()));
+    connect(Project::instance()->model(), SIGNAL(loadingFinished()), this, SLOT(modelReloaded()));
 
     setUniformRowHeights(true);
     setAllColumnsShowFocus(true);
@@ -312,8 +313,18 @@ ProjectWidget::~ProjectWidget()
     KConfig config;
     KConfigGroup stateGroup(&config,"ProjectWindow");
     stateGroup.writeEntry("ListHeaderState",header()->saveState().toBase64());
-
 }
+
+void ProjectWidget::modelAboutToReload()
+{
+    m_currentItemPathBeforeReload=currentItem();
+}
+
+void ProjectWidget::modelReloaded()
+{
+    setCurrentItem(m_currentItemPathBeforeReload);
+}
+
 
 void ProjectWidget::setCurrentItem(const QString& u)
 {
